syntax = "proto3";

package tycho.evm.fluid_v2;

message Pool {
  bytes address = 1;
  bytes token0 = 2;
  bytes token1 = 3;
  bytes created_tx_hash = 4;
}
